test/wildcardVec2.slq
// args: --run

def main(){
	(x:_^2):=(1,2,3); /// error
	return x;
}
